...
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="google"
                android:layout_marginTop="10dp"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>


...


    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:srcCompat="@android:drawable/ic_input_add" />

</LinearLayout>
