...
                        android:layout_marginBottom="0dp"
                        android:textColorHint="@color/gray"
                        android:textColor="@color/black"  />

                </LinearLayout>

                    <Button android:id="@+id/login"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/action_sign_in"
                        android:textStyle="bold"
...
